--- a/index.html
+++ b/index.html
@@ -604,6 +604,14 @@
 								</select>
 							</div>
 							<div class="form-group">
+								<label>Zipcode</label>
+								<div>
+									<div>
+										<input type="text" class="form-control col-xs-6">
+									</div>
+								</div>
+							</div>
+							<div class="form-group">
 								<a href="#" class="btn btn-default">Submit</a>
 							</div>
 						</form>
